PyQuest/src/test/parsing/valid/test012.ql
// Form with computed question
form label {
  "Question?"
    var: boolean = "ADSADsad"
}