PyQuest/src/test/parsing/invalid/test009.ql
form label {
    "Question?"
    _var : boolean
}